обновление 5 лр